updated source files

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://samnan.github.io/ko3docs
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Kohana 3 Development
+subtitle: Application developer guide
+author: Samnan ur Rehman
 simple_search: https://www.google.com/search
 description:
 
